add link to index, include intro phrase on guide

--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -4,6 +4,9 @@ description: "Getting started with Ledgy’s employee participation plans"
 images:
   - ../../img/esop.png
 ---
+
+The following guide will help you get up and running with your employee participation plans on Ledgy.
+
 <Img src="esop.png" align="right" size="300" />
 
 ##### Setup
