--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -15,7 +15,7 @@ The following guide will help you get up and running with your employee particip
 
 2. Download the template on Ledgy
 
-3. There are some some parts to decide and adjust. The respective guides will help you
+3. There are some parts to decide and adjust. The respective guides will help you
 
 4. Contact a law firm to answer any remaining questions about your specific needs
 
@@ -24,7 +24,7 @@ The following guide will help you get up and running with your employee particip
 6. Then, to give the first grant to an employee, decide the amount to give, adjust the allocation agreement accordingly, and let them sign it together with the general agreement
 
 7. On Ledgy
-    * Create options or phantom option transactions from the pool to your employees (Premium package only)
+    * Create option or phantom option transactions from the pool to your employees (Premium package only)
     * In the first transaction define the vesting schedule from the contract. You can then use it in all the following transactions (preset)
     * Commit the new option grants. Then you will get email notifications for important vesting events like the cliff end, and your employees can see their grants in their personal portfolio.
     * Invite your employees to give them access to their portfolio
