add screenshot to guide, add esop/psop guides

--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -1,36 +1,44 @@
 ---
 title: "Employee Participation Plan Guide"
-description: "Getting started with Ledgy’s employee participation plans"
+description: "Getting started with Ledgy’s employee participation plan templates"
 images:
+  - legal-templates.png
   - ../../img/esop.png
 ---
 
 The following guide will help you get up and running with your employee participation plans on Ledgy.
 
-<Img src="esop.png" align="right" size="300" />
+**Note**: This is currently only available in Switzerland. Other countries will follow. Reach out to us if you want yours to be next.
+
+<Img src="legal-templates.png" align="right" size="300" />
 
 ##### Setup
 
-1. Choose whether you want a stock (ESOP) or phantom (PSOP) option plan, based on the pros and cons listed in each guide
+1. With the help of the following guides, choose between
+    * [Stock option plan (ESOP)](/help/employee-participation-guide/esop)
+    * [Phantom option plan (PSOP)](/help/employee-participation-guide/psop)
 
-2. Download the template on Ledgy
+2. Create your company on Ledgy (free), head to the documents page and download your template
 
-3. There are some parts to decide and adjust. The respective guides will help you
+3. There are some parts to decide and adjust. The respective guides will help you.
 
 4. Contact a law firm to answer any remaining questions about your specific needs
 
-5. On Ledgy, you can then head to the transaction page and create an ESOP or PSOP pool
+5. Then, to give the first grant to an employee
+    * Decide the amount to give and adjust the allocation at the end of the contract accordingly
+    * Let the employee sign participation plan agreement including the allocation
 
-6. Then, to give the first grant to an employee, decide the amount to give, adjust the allocation agreement accordingly, and let them sign it together with the general agreement
+<Img src="esop.png" align="right" size="300"/>
 
-7. On Ledgy
-    * Create option or phantom option transactions from the pool to your employees (Premium package only)
+6. On Ledgy
+    * Head to the transaction page (free) or incentives page (premium) and create an ESOP or PSOP pool
+    * Create option or phantom option transactions from the pool to your employees (premium)
     * In the first transaction define the vesting schedule from the contract. You can then use it in all the following transactions (preset)
     * Commit the new option grants. Then you will get email notifications for important vesting events like the cliff end, and your employees can see their grants in their personal portfolio.
     * Invite your employees to give them access to their portfolio
 
 
-8. You’re all set!
+7. You’re all set!
 
 
 ##### More resources
@@ -38,12 +46,3 @@ The following guide will help you get up and running with your employee particip
 - [Video by Kellerhals-Carrard](https://www.youtube.com/watch?v=RBm4oyPy23w&t=8s)
 
 - [Slides by Ledgy](https://docs.google.com/presentation/d/1y_ZH8FBELIdJgwd5FhXFw2Dl6TBLgtLyoICQZJIcXKs/edit#slide=id.g4ab326567f_1_0)
-
-
-##### Costs in Switzerland
-
-- Only the ESOP/PSOP: 1-2k CHF 
-
-- Tax ruling: 5k on top of the ESOP/PSOP price
-
-
