--- a/src/markdown/help/employee-participation-guide/psop.mdx
+++ b/src/markdown/help/employee-participation-guide/psop.mdx
@@ -12,7 +12,7 @@ The following guide will help you decide whether to choose phantom or option pla
 * Employees only pay taxes when money is flowing, which makes it easier to bear
 
 ##### Contra
-* No tax optimization; payment of more taxes below the line compared to ESOP plan
+* No tax optimization; payment of more taxes overall compared to ESOP plan
 * Employees don’t become real shareholders, putting them on a second layer compared to the founders and investors. This gives them less security that their rights are protected and makes them feel less connected to the company, reducing their long-term commitment.
 
 #### Parameters to decide
