--- a/src/markdown/help/employee-participation-guide.mdx
+++ b/src/markdown/help/employee-participation-guide.mdx
@@ -2,7 +2,10 @@
 title: "Employee Participation Plan Guide"
 description: "Getting started with Ledgy’s employee participation plan templates"
 images:
-  - legal-templates.png
+  - ./employee-participation-guide/legal-templates.png
+  - ./employee-participation-guide/kellerhals_carrard.png
+  - ./employee-participation-guide/wenger_vieli.png
+  - ./employee-participation-guide/lexr.png
   - ../../img/esop.png
 ---
 
@@ -46,3 +49,13 @@ The following guide will help you get up and running with your employee particip
 - [Video by Kellerhals-Carrard](https://www.youtube.com/watch?v=RBm4oyPy23w&t=8s)
 
 - [Slides by Ledgy](https://docs.google.com/presentation/d/1y_ZH8FBELIdJgwd5FhXFw2Dl6TBLgtLyoICQZJIcXKs/edit#slide=id.g4ab326567f_1_0)
+
+<Img src="lexr.png" size="50" align="right" />
+
+<Img src="wenger_vieli.png" size="50" align="right"  />
+
+<Img src="kellerhals_carrard.png" size="50" align="right" />
+
+##### Partners
+
+[Kellerhals Carrard](https://www.kellerhals-carrard.ch/), [Wenger&Vieli](https://www.wengervieli.ch/) and [Lexr](https://lexr.ch/).
