--- a/src/markdown/jobs.mdx
+++ b/src/markdown/jobs.mdx
@@ -5,7 +5,7 @@ images:
 - ./jobs/team-skiing.jpg
 ---
 
-<Img src="team-skiing.png" />
+<Img src="team-skiing.jpg" />
 
 We are
 * 7 young people from 5 countries
