add bizdev internship page

--- a/src/markdown/jobs/software-engineer.mdx
+++ b/src/markdown/jobs/software-engineer.mdx
@@ -8,7 +8,7 @@ We are Ledgy, a SaaS startup from Zurich, looking for a software engineer to gro
 
 Ledgy is a SaaS tool to manage the equity of private companies. It helps to democratize ownership in startups by assisting founders to grant equity to their employees. We’ve also developed a first concept to bring shares of startups on the Ethereum blockchain.
 
-Our [customers](/) are successful companies from Switzerland and other European countries, like VIU, Farmy, or the Crypto Finance AG.
+Our [customers](/#references) are successful companies from Switzerland and other European countries, like VIU, Farmy, or the Crypto Finance AG.
 
 We are a young team that graduated from ETH Zurich in 2017. All of our code is developed in-house, by us. We are inspired by the startup scene and hacker spirit in Silicon Valley and want to bring this vibe to Switzerland. (We have once been [invited](https://blog.ledgy.com/our-interview-at-y-combinator-e1131fd89ecc) to Y Combinator for an interview.)
 
