--- a/src/markdown/jobs.mdx
+++ b/src/markdown/jobs.mdx
@@ -7,14 +7,14 @@ images:
 
 <Img src="team-skiing.jpg" />
 
-We are
+###### We are
 * 7 young people from 5 countries
-* purpose-driven, trying to contribute our parts to make the world a little better
-* outdoor, meditation, and space enthusiasts
-* inspired by the startup scene and hacker spirit in Silicon Valley and want to bring this vibe to Switzerland
-* committed to our values of transparency, ambition and fun
+* Purpose-driven, trying to contribute our parts to make the world a little better
+* Outdoor, meditation, and space enthusiasts
+* Inspired by the startup scene and hacker spirit in Silicon Valley and want to bring this vibe to Switzerland
+* Committed to our values of transparency, ambition and fun
 
 We’d love to hear from you if you think that you fit into our team. Currently we’re looking for
-* [business development intern](/jobs/bizdev)
-* [software engineer](/jobs/software-engineer)
-* designer (UX/graphics)
+* [Business development intern](/jobs/business-developer)
+* [Software engineer](/jobs/software-engineer)
+* Designer (UX/graphics)
